@@ -1,0 +1,22 @@
+use strict;
+use warnings;
+
+use File::Object;
+use MARC::Convert::Wikidata::Transform;
+use MARC::File::XML;
+use MARC::Record;
+use Perl6::Slurp qw(slurp);
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
+
+# Data directory.
+my $data = File::Object->new->up->dir('data');
+
+# Test.
+my $marc_data = slurp($data->file('cnb000060952.xml')->s);
+my $obj = MARC::Convert::Wikidata::Transform->new(
+	'marc_record' => MARC::Record->new_from_xml($marc_data, 'UTF-8'),
+);
+my $ret = $obj->object;
+my $isbn_obj = $ret->isbns->[0];
+is($isbn_obj->isbn, '80-7011-077-5', 'Get ISBN (80-7011-077-5).');
